--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "next": "^7.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
